// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeDateFormControlOptions should normalize complex date form control options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controllerName": "user-form",
  "directory": null,
  "feature": null,
  "formField": {
    "cssClass": null,
    "directiveList": [],
    "hasClearButton": true,
    "label": "Birth Date",
    "prefixButton": null,
    "suffixButton": {
      "directiveList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/material-form-system",
          "name": "rxapInputClearButton",
          "namedImport": "InputClearButtonDirective",
          "namespaceImport": null,
        },
      ],
      "icon": "clear",
      "importList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/icon",
          "name": "MatIconModule",
          "namedImport": null,
          "namespaceImport": null,
        },
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/button",
          "name": "MatButtonModule",
          "namedImport": null,
          "namespaceImport": null,
        },
      ],
      "svgIcon": null,
    },
  },
  "formName": "user-form",
  "handlebars": [Function],
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/input",
      "name": "MatInputModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/datepicker",
      "name": "MatDatepickerModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/icon",
      "name": "MatIconModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/button",
      "name": "MatButtonModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/material-form-system",
      "name": "rxapInputClearButton",
      "namedImport": "InputClearButtonDirective",
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "date",
  "label": "Birth Date",
  "memberList": [],
  "name": "birthDate",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "placeholder": "Select your birth date",
  "prefix": null,
  "project": "ui-lib",
  "replace": false,
  "role": "control",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "date-form-control.hbs",
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "Date",
    "namedImport": null,
    "namespaceImport": null,
  },
  "validatorList": [
    "required",
  ],
}
`;

exports[`NormalizeDateFormControlOptions should normalize minimal date form control options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controllerName": "test-form",
  "directory": null,
  "feature": null,
  "formField": {
    "cssClass": null,
    "directiveList": [],
    "hasClearButton": true,
    "label": null,
    "prefixButton": null,
    "suffixButton": {
      "directiveList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/material-form-system",
          "name": "rxapInputClearButton",
          "namedImport": "InputClearButtonDirective",
          "namespaceImport": null,
        },
      ],
      "icon": "clear",
      "importList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/icon",
          "name": "MatIconModule",
          "namedImport": null,
          "namespaceImport": null,
        },
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/button",
          "name": "MatButtonModule",
          "namedImport": null,
          "namespaceImport": null,
        },
      ],
      "svgIcon": null,
    },
  },
  "formName": "test-form",
  "handlebars": [Function],
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/input",
      "name": "MatInputModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/datepicker",
      "name": "MatDatepickerModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/icon",
      "name": "MatIconModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/button",
      "name": "MatButtonModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/material-form-system",
      "name": "rxapInputClearButton",
      "namedImport": "InputClearButtonDirective",
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "date",
  "label": null,
  "memberList": [],
  "name": "testDate",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "placeholder": null,
  "prefix": null,
  "project": "ui-lib",
  "replace": false,
  "role": "control",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "date-form-control.hbs",
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "Date",
    "namedImport": null,
    "namespaceImport": null,
  },
  "validatorList": [],
}
`;
